# numerical_analysis_projects

./: LICENSE  README.md
elipse_circle/: CMakeLists.txt
elipse_circle/example/: case_quad.cpp  gendata_objfunc_elipse_circle.cpp  main.cpp
elipse_circle/include/elipse_circle/: elipse_circle.hpp  elipse_circle.hpp.gch
elipse_circle/plot/: gendata_objfunc_elipse_circle  gendata_objfunc_elipse_circle.cpp  script.plt
elipse_circle/src/: main.cpp
elipse_circle/test/: test_elipse_circle.cpp
van_der_pol/: main.py  setup.py
van_der_pol/test/: test_van_der_pol.py
van_der_pol/van_der_pol/: __init__.py  euler_legacy.py  numerical_method.py
